# my-first-flake

./: cabal.project  flake.nix  my-first-flake.cabal
app/: Main.hs
src/: Gift.hs
